# pricePredictor

./: .gitignore  .output.txt  00_START_HERE.md  AGENTS.md  DEPLOYMENT_READY.md  DOCKER_VERIFICATION_REPORT.md  Directory.Packages.props  FILE_MANIFEST.md  GET_STARTED_PRICE_PREDICTION.md  IMPLEMENTATION_SUMMARY.md  PRICE_PREDICTION_AGENT_GUIDE.md  PRICE_PREDICTION_INDEX.md  PRICE_PREDICTION_QUICK_REF.md  PricePredictor.sln  PricePredictor.slnx  QUICKSTART.md  TRADING_NOTIFICATIONS_IMPLEMENTATION.md  VERIFICATION_CHECKLIST.md  YAHOO_FINANCE_README.md  compose.yaml
.github/: copilot-instructions.md
AppHost/: AppHost.cs  AppHost.csproj
PricePredicator.App/: BackgroundService.cs  Dockerfile  GoldNewsBackgroundService.cs  GoldNewsSettings.cs  NtfyClient.cs  NtfySettings.cs  PricePredicator.App.csproj  Program.cs  YahooFinanceBackgroundService.cs  appsettings.Development.json  appsettings.json
PricePredicator.Infrastructure/: ClientsExtensions.cs  GoldNewsSettings.cs  InfrastructureMigrationExtensions.cs  NtfyClient.cs  NtfySettings.cs  PricePredicator.Infrastructure.csproj
PricePredicator.Integration.Tests/: COMPLETE_SUMMARY.md  ExternalResourceAvailabilityTests.cs  GoldNewsBackgroundServiceTests.cs  GoldNewsEmbeddingsTests.cs  IMPLEMENTATION_SUMMARY.md  LiveSystemDataPersistenceTests.cs  ManualTest.ps1  PricePredicator.Integration.Tests.csproj  QuickTest.ps1  README.md  YahooFinanceDataPersistenceTests.cs  appsettings.Test.json
army/: README.md  pyproject.toml  report.md
army/src/army/: crew.py  main.py
army/src/grpc/: gateway_pb2.py  grpc_client.py
(+343 files in other folders)
