[project]
name = "army"
version = "0.1.0"
description = "army using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.75.3",
]

[project.scripts]
army = "army.main:run"
run_crew = "army.main:run"
train = "army.main:train"
replay = "army.main:replay"
test = "army.main:test"
run_with_trigger = "army.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
